--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.7.0",
     "axios": "^1.6.0",
     "firebase": "^10.5.2",
     "localforage": "^1.10.0",
@@ -20,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
+    "react-tabs": "^6.0.2",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0"
   },
